--- a/src/output.css
+++ b/src/output.css
@@ -533,12 +533,6 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
-  .z-10 {
-    z-index: 10;
-  }
-  .z-40 {
-    z-index: 40;
-  }
   .z-50 {
     z-index: 50;
   }
@@ -599,11 +593,32 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
+  }
+  .mt-12 {
+    margin-top: calc(var(--spacing) * 12);
+  }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
+  }
+  .mt-24 {
+    margin-top: calc(var(--spacing) * 24);
+  }
+  .mt-28 {
+    margin-top: calc(var(--spacing) * 28);
+  }
   .mr-8 {
     margin-right: calc(var(--spacing) * 8);
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-16 {
+    margin-bottom: calc(var(--spacing) * 16);
   }
   .ml-8 {
     margin-left: calc(var(--spacing) * 8);
@@ -629,6 +644,15 @@
   .table {
     display: table;
   }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
+  }
+  .h-16 {
+    height: calc(var(--spacing) * 16);
+  }
+  .h-32 {
+    height: calc(var(--spacing) * 32);
+  }
   .h-\[75px\] {
     height: 75px;
   }
@@ -641,11 +665,20 @@
   .h-full {
     height: 100%;
   }
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
   .w-11 {
     width: calc(var(--spacing) * 11);
   }
   .w-11\/12 {
     width: calc(11/12 * 100%);
+  }
+  .w-16 {
+    width: calc(var(--spacing) * 16);
+  }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
   }
   .w-\[30\%\] {
     width: 30%;
@@ -674,6 +707,9 @@
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .flex-col {
+    flex-direction: column;
+  }
   .flex-row {
     flex-direction: row;
   }
@@ -686,11 +722,20 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-items-center {
+    justify-items: center;
+  }
   .self-center {
     align-self: center;
   }
   .justify-self-center {
     justify-self: center;
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .overflow-scroll {
+    overflow: scroll;
   }
   .rounded {
     border-radius: 0.25rem;
@@ -698,12 +743,13 @@
   .rounded-\[15px\] {
     border-radius: 15px;
   }
-  .rounded-lg {
-    border-radius: var(--radius-lg);
-  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-0 {
+    border-style: var(--tw-border-style);
+    border-width: 0px;
   }
   .border-4 {
     border-style: var(--tw-border-style);
@@ -778,9 +824,6 @@
   .bg-\[\#FDFF7A\] {
     background-color: #FDFF7A;
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -834,27 +877,37 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
+  .text-black {
+    color: var(--color-black);
+  }
   .text-white {
     color: var(--color-white);
   }
   .underline {
     text-decoration-line: underline;
   }
+  .decoration-0 {
+    text-decoration-thickness: 0px;
+  }
   .placeholder-black {
     &::placeholder {
       color: var(--color-black);
     }
   }
-  .shadow-lg {
-    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .filter {
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  .sm\:text-sm {
+    @media (width >= 40rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .sm\:text-\[12px\] {
+    @media (width >= 40rem) {
+      font-size: 12px;
+    }
   }
   .md\:col-span-2 {
     @media (width >= 48rem) {
@@ -901,11 +954,6 @@
       grid-row-start: 4;
     }
   }
-  .md\:row-start-5 {
-    @media (width >= 48rem) {
-      grid-row-start: 5;
-    }
-  }
   .md\:row-start-6 {
     @media (width >= 48rem) {
       grid-row-start: 6;
@@ -926,19 +974,9 @@
       grid-row-start: 9;
     }
   }
-  .md\:row-start-10 {
+  .md\:row-end-2 {
     @media (width >= 48rem) {
-      grid-row-start: 10;
-    }
-  }
-  .md\:row-start-11 {
-    @media (width >= 48rem) {
-      grid-row-start: 11;
-    }
-  }
-  .md\:row-start-12 {
-    @media (width >= 48rem) {
-      grid-row-start: 12;
+      grid-row-end: 2;
     }
   }
   .md\:row-end-3 {
@@ -951,11 +989,6 @@
       grid-row-end: 4;
     }
   }
-  .md\:row-end-5 {
-    @media (width >= 48rem) {
-      grid-row-end: 5;
-    }
-  }
   .md\:row-end-6 {
     @media (width >= 48rem) {
       grid-row-end: 6;
@@ -964,16 +997,6 @@
   .md\:row-end-7 {
     @media (width >= 48rem) {
       grid-row-end: 7;
-    }
-  }
-  .md\:row-end-8 {
-    @media (width >= 48rem) {
-      grid-row-end: 8;
-    }
-  }
-  .md\:row-end-10 {
-    @media (width >= 48rem) {
-      grid-row-end: 10;
     }
   }
   .md\:grid {
@@ -1016,6 +1039,26 @@
       width: calc(1/2 * 100%);
     }
   }
+  .md\:w-3\/2 {
+    @media (width >= 48rem) {
+      width: calc(3/2 * 100%);
+    }
+  }
+  .md\:w-3\/4 {
+    @media (width >= 48rem) {
+      width: calc(3/4 * 100%);
+    }
+  }
+  .md\:w-4\/5 {
+    @media (width >= 48rem) {
+      width: calc(4/5 * 100%);
+    }
+  }
+  .md\:w-7\/8 {
+    @media (width >= 48rem) {
+      width: calc(7/8 * 100%);
+    }
+  }
   .md\:w-\[95\%\] {
     @media (width >= 48rem) {
       width: 95%;
@@ -1041,19 +1084,9 @@
       grid-template-rows: repeat(9, minmax(0, 1fr));
     }
   }
-  .md\:grid-rows-12 {
+  .md\:justify-items-center {
     @media (width >= 48rem) {
-      grid-template-rows: repeat(12, minmax(0, 1fr));
-    }
-  }
-  .md\:justify-items-start {
-    @media (width >= 48rem) {
-      justify-items: start;
-    }
-  }
-  .md\:justify-self-start {
-    @media (width >= 48rem) {
-      justify-self: flex-start;
+      justify-items: center;
     }
   }
   .md\:bg-\[\#FCFFA5\] {
@@ -1069,6 +1102,21 @@
   .md\:p-2 {
     @media (width >= 48rem) {
       padding: calc(var(--spacing) * 2);
+    }
+  }
+  .md\:p-4 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:p-8 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 8);
+    }
+  }
+  .md\:text-center {
+    @media (width >= 48rem) {
+      text-align: center;
     }
   }
   .md\:align-top {
@@ -1342,99 +1390,8 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-shadow-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-inset-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-inset-shadow-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ring-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ring-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-inset-ring-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-inset-ring-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-ring-inset {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ring-offset-width {
-  syntax: "<length>";
-  inherits: false;
-  initial-value: 0px;
-}
-@property --tw-ring-offset-color {
-  syntax: "*";
-  inherits: false;
-  initial-value: #fff;
-}
-@property --tw-ring-offset-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
-}
-@property --tw-blur {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-brightness {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-contrast {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-grayscale {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-hue-rotate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-sepia {
-  syntax: "*";
-  inherits: false;
 }
